syntax = "proto3";
package cellarfees.v2;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/peggyjv/sommelier/v7/x/cellarfees/types/v2";

message FeeTokenBalance {
    cosmos.base.v1beta1.Coin balance = 1 [ (gogoproto.nullable) = false ];
    string usd_value = 2 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable) = false
    ];
}
